@@ -1,2 +1,5 @@
 # FireEffect
 Demonstrates high performance pixel based fire and flames effect in JavaFX.
+
+
+java --module-path ${PATH_TO_FX} --add-modules javafx.controls fireeffect.FireEffectPixelBuffer
